Updates navbar and footer

--- a/jobs-and-advertising.html
+++ b/jobs-and-advertising.html
@@ -286,7 +286,7 @@
       <div class="panel-group non-mobile-menu" id="accordion">
         <div class="panel panel-default">
           <div id="climbingNewsPanel" class="panel-collapse collapse">
-            <div class="panel-body post-submenu">
+            <div class="panel-body submenu">
               <div class="giant-screen-settings">
                 <div class="col-md-3 col-sm-3 col-xs-3">
                   <h4 class="submenu-header">Climbing News Categories:</h4>
@@ -639,274 +639,17 @@
     </div>
   </header>
 
-  <!-- MAIN CONTENT ==== -->
-  <section id="article-content">
-    <div class="container" id="center-panel-content">
-      <!-- Related Articles Section ==== -->
-      <div id="related-articles-section">
-        <div class="related-articles-header">
-          <h4>Related Articles:</h4>
-        </div>
-        <div class="row related-articles-content">
-          <div class="col-xs-4">
-            <a href="post.html">
-              <div class="submenu-related-article">
-                <div class="related-article-thumbnail-container">
-                  <img src="assets/img/climb.png" class="related-article-thumbnail" />
-                </div>
-              </div>
-              <div class="read-next-article-title">
-                article title tile title goes here
-              </div>
-            </a>
-          </div>
-          <div class="col-xs-4">
-            <a href="post.html">
-              <div class="submenu-related-article">
-                <div class="related-article-thumbnail-container">
-                  <img src="assets/img/climb.png" class="related-article-thumbnail" />
-                </div>
-              </div>
-              <div class="read-next-article-title">
-                article title tile title goes here
-              </div>
-            </a>
-          </div>
-          <div class="col-xs-4">
-            <a href="post.html">
-              <div class="submenu-related-article">
-                <div class="related-article-thumbnail-container">
-                  <img src="assets/img/climb.png" class="related-article-thumbnail" />
-                </div>
-              </div>
-              <div class="read-next-article-title">
-                article title tile title goes here
-              </div>
-            </a>
-          </div>
-        </div>
-        <hr />
-      </div>
-      <!-- Related Articles Section ==== -->
+  <!--  homepage content section -->
+  <section>
+    <div class="container" id="about-us-panel-content">
       <div class="row">
         <div class="col-sm-9 col-xs-12">
-          <div class="article-header">
-            <div class="article-title">
-              Article Title Goes Here and Can Be Really Really Really Really Really Really Long
-            </div>
-            <div class="article-metadata">
-              By <a href="author.html" class="article-author">Author Name</a> | Date | 3 comments
-            </div>
+          <div class="center-panel-content-header">
+            Jobs
           </div>
-          <div class="article-content">
-            <p>
-              Lorem ipsum dolor sit amet, in nulla tellus vel urna leo urna. Amet potenti
-              nunc amet sit molestie vestibulum. Eu integer urna, dui ante elementum felis,
-              sollicitudin nunc. Massa quis condimentum viverra elit, a facilisi eu aenean
-              nisl netus vulputate. Feugiat phasellus. Viverra scelerisque, orci urna eget
-              imperdiet eu, egestas duis erat a, voluptas ac leo erat magna nullam quam,
-              consequat sit tortor luctus ornare. Mi orci amet aliquam aliquam mi faucibus,
-              aliquet adipiscing et gravida, etiam aliquet dui. Lectus ridiculus. Justo mi
-              quam wisi in, tellus et, ligula gravida metus condimentum imperdiet nulla duis,
-              vitae arcu massa Justo mi quam wisi in, tellus et, ligula gravida metus nunc.
-              Massa quis condimentum viverra elit, a facilisi eu aenean nisl netus vulputate.
-              Feugiat phasellus. Viverra scelerisque, orci urna eget imperdiet eu, egestas
-              duis erat a, voluptas ac leo erat magna nullam quam, consequat sit tortor
-              luctus ornare.
-            </p>
-            <div class="article-content-image-container">
-              <img src="assets/img/climb.png" class="article-content-image"/>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet, in nulla tellus vel urna leo urna. Amet potenti
-              nunc amet sit molestie vestibulum. Eu integer urna, dui ante elementum felis,
-              sollicitudin nunc. Massa quis condimentum viverra elit, a facilisi eu aenean
-              nisl netus vulputate. Feugiat phasellus. Viverra scelerisque, orci urna eget
-              imperdiet eu, egestas duis erat a, voluptas ac leo erat magna nullam quam,
-              consequat sit tortor luctus ornare. Mi orci amet aliquam aliquam mi faucibus,
-              aliquet adipiscing et gravida, etiam aliquet dui. Lectus ridiculus. Justo mi
-              quam wisi in, tellus et, ligula gravida metus condimentum imperdiet nulla duis,
-              vitae arcu massa Justo mi quam wisi in, tellus et, ligula gravida metus nunc.
-              Massa quis condimentum viverra elit, a facilisi eu aenean nisl netus vulputate.
-              Feugiat phasellus. Viverra scelerisque, orci urna eget imperdiet eu, egestas
-              duis erat a, voluptas ac leo erat magna nullam quam, consequat sit tortor
-              luctus ornare.
-            </p>
-            <div class="article-content-image-container">
-              <img src="assets/img/libby.jpg" class="article-content-image"/>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet, in nulla tellus vel urna leo urna. Amet potenti
-              nunc amet sit molestie vestibulum. Eu integer urna, dui ante elementum felis,
-              sollicitudin nunc. Massa quis condimentum viverra elit, a facilisi eu aenean
-              nisl netus vulputate. Feugiat phasellus. Viverra scelerisque, orci urna eget
-              imperdiet eu, egestas duis erat a, voluptas ac leo erat magna nullam quam,
-              consequat sit tortor luctus ornare. Mi orci amet aliquam aliquam mi faucibus,
-              aliquet adipiscing et gravida, etiam aliquet dui. Lectus ridiculus. Justo mi
-              quam wisi in, tellus et, ligula gravida metus condimentum imperdiet nulla duis,
-              vitae arcu massa Justo mi quam wisi in, tellus et, ligula gravida metus nunc.
-              Massa quis condimentum viverra elit, a facilisi eu aenean nisl netus vulputate.
-              Feugiat phasellus. Viverra scelerisque, orci urna eget imperdiet eu, egestas
-              duis erat a, voluptas ac leo erat magna nullam quam, consequat sit tortor
-              luctus ornare.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, in nulla tellus vel urna leo urna. Amet potenti
-              nunc amet sit molestie vestibulum. Eu integer urna, dui ante elementum felis,
-              sollicitudin nunc. Massa quis condimentum viverra elit, a facilisi eu aenean
-              nisl netus vulputate. Feugiat phasellus. Viverra scelerisque, orci urna eget
-              imperdiet eu, egestas duis erat a, voluptas ac leo erat magna nullam quam,
-              consequat sit tortor luctus ornare. Mi orci amet aliquam aliquam mi faucibus,
-              aliquet adipiscing et gravida, etiam aliquet dui. Lectus ridiculus. Justo mi
-              quam wisi in, tellus et, ligula gravida metus condimentum imperdiet nulla duis,
-              vitae arcu massa Justo mi quam wisi in, tellus et, ligula gravida metus nunc.
-              Massa quis condimentum viverra elit, a facilisi eu aenean nisl netus vulputate.
-              Feugiat phasellus. Viverra scelerisque, orci urna eget imperdiet eu, egestas
-              duis erat a, voluptas ac leo erat magna nullam quam, consequat sit tortor
-              luctus ornare.
-            </p>
+          <div class="center-panel-content-header">
+            Advertising
           </div>
-          <hr />
-          <div id="read-next">
-            <h3>Read next:</h3>
-            <div class="row read-next-articles">
-              <div class="col-xs-4">
-                <a href="post.html">
-                  <div class="submenu-related-article">
-                    <div class="related-article-thumbnail-container">
-                      <img src="assets/img/climb.png" class="related-article-thumbnail" />
-                    </div>
-                  </div>
-                  <div class="read-next-article-title">
-                    article title tile title goes here
-                  </div>
-                </a>
-              </div>
-              <div class="col-xs-4">
-                <a href="post.html">
-                  <div class="submenu-related-article">
-                    <div class="related-article-thumbnail-container">
-                      <img src="assets/img/climb.png" class="related-article-thumbnail" />
-                    </div>
-                  </div>
-                  <div class="read-next-article-title">
-                    article title tile title goes here
-                  </div>
-                </a>
-              </div>
-              <div class="col-xs-4">
-                <a href="post.html">
-                  <div class="submenu-related-article">
-                    <div class="related-article-thumbnail-container">
-                      <img src="assets/img/climb.png" class="related-article-thumbnail" />
-                    </div>
-                  </div>
-                  <div class="read-next-article-title">
-                    article title tile title goes here
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <hr />
-          <div id="comments">
-            <div class="comments-wrap">
-              <h3>4 comments</h3>
-              <!-- These comments will have an image and more information when we use WordPress -->
-              <ol class="comments-list">
-                <li class="comment">
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <img src="assets/img/user.png" class="user-avatar" />
-                    </div>
-                    <div class="col-sm-10">
-                      <h4>John Smith <small>&bull; Aug 12, 2014</small></h4>
-                      <div class="comment-body">
-                        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Donec ullamcorper nulla non metus auctor fringilla. Sed posuere consectetur est at lobortis.</p>
-                        <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-                      </div><!-- comment-body -->
-                      <ol class="children">
-                        <li class="comment">
-                          <div class="row">
-                            <div class="col-sm-2">
-                              <img src="assets/img/user.png" class="user-avatar" />
-                            </div>
-                            <div class="col-sm-10">
-                              <h4>Chris McCooper <small>&bull; Aug 12, 2014</small></h4>
-                              <div class="comment-body">
-                                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Donec ullamcorper nulla non metus auctor fringilla. Sed posuere consectetur est at lobortis.</p>
-                              </div><!-- comment-body -->
-                              <ol class="children">
-                                <li class="comment">
-                                  <div class="row">
-                                    <div class="col-sm-2">
-                                      <img src="assets/img/user.png" class="user-avatar" />
-                                    </div>
-                                    <div class="col-sm-10">
-                                      <h4>Johnny Dee <small>&bull; Aug 12, 2014</small></h4>
-                                      <div class="comment-body">
-                                        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Donec ullamcorper nulla non metus auctor fringilla. Sed posuere consectetur est at lobortis.</p>
-                                      </div><!-- comment-body -->
-                                    </div>
-                                  </div>
-                                </li>
-                              </ol>
-                            </div>
-                          </div>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                </li>
-                <li class="comment">
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <img src="assets/img/user.png" class="user-avatar" />
-                    </div>
-                    <div class="col-sm-10">
-                      <h4>Jane Smith <small>&bull; Aug 9, 2014</small></h4>
-                      <div class="comment-body">
-                        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Donec ullamcorper nulla non metus auctor fringilla. Sed posuere consectetur est at lobortis.</p>
-                      </div><!-- comment-body -->
-                    </div>
-                  </div>
-                </li>
-              </ol><!-- comments-list -->
-              <div id="leave-comment">
-                <h3>Leave a comment</h3>
-                <form>
-                  <p class="comment-email-disclaimer">Your email address will not be published. Required fields are marked *</p>
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <p class="comment-form-author">
-                        <label>Name *</label>
-                        <input id="author" type="text" placeholder="Crux Crush">
-                      </p>
-                    </div>
-                    <div class="col-sm-4">
-                      <p class="comment-form-email">
-                        <label for="email">Email *</label>
-                        <input id="email" type="email" placeholder="climber@example.com">
-                      </p>
-                    </div>
-                    <div class="col-sm-4">
-                      <p class="comment-form-url">
-                        <label for="url">Website</label>
-                        <input id="url" type="url" placeholder="cruxcrush.com">
-                      </p>
-                    </div>
-                  </div>
-                  <p class="comment-form-comment">
-                    <label for="comment">Comment</label>
-                    <textarea id="comment" cols="45" rows="8" placeholder="Leave your comment..."></textarea>
-                  </p>
-                  <p class="form-submit">
-                    <input name="submit" type="submit" id="submit" value="Post Comment" class="comment-button pull-right">
-                  </p>
-                </form>
-              </div><!-- leave-comment -->
-            </div><!-- comments -->
-          </div><!-- comments-wrap -->
         </div>
         <div class="col-sm-3 col-xs-12 ads-sidebar">
           <div id="social-icons">
@@ -917,7 +660,7 @@
           <div class="widget">
             <h4>Join our Mailing List</h4>
             <p>Keep up-to-date with the latest news, and we'll <strong>send you a discount for the course!</strong></p>
-            <button class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#myModal">
+            <button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
               Subscribe
             </button>
           </div><!-- widget -->
@@ -930,7 +673,8 @@
         </div>
       </div>
 		</div>
-  </section>
+	</section>
+  <!--  homepage content section -->
 
   <!--  footer section -->
   <footer class="site-footer">
@@ -991,6 +735,7 @@
       </div>
     </div><!-- container -->
   </footer>
+
   <!--  sticky ad footer section -->
   <footer class="navbar-fixed-bottom bottom-ad">
     <div class="ad-320x50">
@@ -998,7 +743,7 @@
     </div>
   </footer>
 
-	<!-- MODAL  ======================================== -->
+  <!-- MODAL  ======================================== -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -1033,4 +778,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-</html>
+<!-- </html> -->
